# near-citizens-house

./: .coderabbit.yaml  .env.example  .gitignore  .gitmodules  .prettierignore  .prettierrc  DEVELOPER.md  LICENSE  README.md  allure-categories.json  checkly.config.ts  eslint.config.mjs  index.html  knip.json  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test-results.json  vitest.config.ts
.cargo/: config.toml
.devcontainer/: devcontainer.json  docker-compose.yml  post-create.sh  post-start.sh
.github/: CODEOWNERS
100/: index.html
101/: index.html
102/: index.html
103/: index.html
105/: index.html
106/: index.html
107/: index.html
108/: index.html
109/: index.html
110/: index.html
111/: index.html
112/: index.html
113/: index.html
114/: index.html
115/: index.html
116/: index.html
117/: index.html
118/: index.html
119/: index.html
120/: index.html
121/: index.html
122/: index.html
123/: index.html
124/: index.html
125/: index.html
126/: index.html
127/: index.html
128/: index.html
129/: index.html
130/: index.html
131/: index.html
132/: index.html
133/: index.html
134/: index.html
135/: index.html
136/: index.html
137/: index.html
138/: index.html
139/: index.html
140/: index.html
141/: index.html
142/: index.html
143/: index.html
144/: index.html
145/: index.html
146/: index.html
147/: index.html
148/: index.html
149/: index.html
150/: index.html
151/: index.html
152/: index.html
153/: index.html
154/: index.html
155/: index.html
156/: index.html
157/: index.html
158/: index.html
159/: index.html
160/: index.html
161/: index.html
162/: index.html
163/: index.html
164/: index.html
165/: index.html
166/: index.html
167/: index.html
168/: index.html
169/: index.html
171/: index.html
172/: index.html
173/: index.html
174/: index.html
175/: index.html
177/: index.html
179/: index.html
181/: index.html
183/: index.html
184/: index.html
185/: index.html
186/: index.html
187/: index.html
188/: index.html
189/: index.html
19/: index.html
190/: index.html
191/: index.html
192/: index.html
193/: index.html
194/: index.html
195/: index.html
196/: index.html
197/: index.html
198/: index.html
199/: index.html
20/: index.html
200/: index.html
201/: index.html
202/: index.html
203/: index.html
204/: index.html
205/: index.html
206/: index.html
207/: index.html
208/: index.html
209/: index.html
21/: index.html
210/: index.html
211/: index.html
212/: index.html
213/: index.html
214/: index.html
215/: index.html
216/: index.html
217/: index.html
218/: index.html
219/: index.html
22/: index.html
220/: index.html
221/: index.html
222/: index.html
contracts/governance/: Cargo.toml
contracts/governance/src/: lib.rs
contracts/governance/tests/: helpers.rs  integration.rs  quorum_tests.rs  security_tests.rs
contracts/sputnik-bridge/: Cargo.toml  DEPLOYMENT.md  dao-policy.json  dao-policy.test.json
contracts/sputnik-bridge/src/: lib.rs  sputnik_dao.rs  verified_accounts.rs
contracts/sputnik-bridge/tests/: README.md  admin_tests.rs  dynamic_quorum_tests.rs  edge_case_tests.rs  failure_handling_tests.rs  helpers.rs  integration.rs  member_addition_tests.rs  proposal_tests.rs  security_tests.rs  setup_tests.rs  unit.rs  voting_tests.rs
contracts/sputnik-bridge/tests/integration/: admin_tests.rs  dao_sanity_tests.rs  dynamic_quorum_tests.rs  edge_case_tests.rs  failure_handling_tests.rs  helpers.rs  member_addition_tests.rs  proposal_tests.rs  security_tests.rs  setup_tests.rs  state_consistency_tests.rs  voting_tests.rs
contracts/sputnik-bridge/tests/unit/: access_control_tests.rs  backend_wallet_tests.rs  callbacks_tests.rs  citizen_role_tests.rs  constants_tests.rs  description_validation_tests.rs  events_tests.rs  helpers.rs  initialization_tests.rs  invariants_tests.rs  quorum_tests.rs  read_functions_tests.rs  sputnik_dao_serialization_tests.rs  sputnik_dao_validation_tests.rs  write_functions_tests.rs
contracts/sputnik-dao-interface/: Cargo.toml
contracts/sputnik-dao-interface/src/: lib.rs
contracts/sputnik-dao-interface/tests/: unit.rs
contracts/sputnik-dao-interface/tests/unit/: serialization_tests.rs  validation_tests.rs
contracts/verification-db/: Cargo.toml
contracts/verification-db/src/: lib.rs
contracts/verification-db/tests/: workspaces.rs
contracts/verified-accounts/: Cargo.toml  README.md
contracts/verified-accounts-interface/: Cargo.toml
contracts/verified-accounts-interface/src/: lib.rs
contracts/verified-accounts-interface/tests/: unit.rs
contracts/verified-accounts-interface/tests/unit/: serialization_tests.rs  validation_tests.rs
contracts/verified-accounts/docs/: UPGRADING.md
contracts/verified-accounts/scripts/: build_test_fixtures.sh
contracts/verified-accounts/src/: interface.rs  lib.rs
contracts/verified-accounts/tests/: integration.rs  unit.rs  workspaces.rs
contracts/verified-accounts/tests/fixtures/: README.md
contracts/verified-accounts/tests/fixtures/v1/: .gitkeep
contracts/verified-accounts/tests/fixtures/v2/: Cargo.toml  README.md
contracts/verified-accounts/tests/fixtures/v2/src/: interface.rs  lib.rs
contracts/verified-accounts/tests/integration/: access_control_tests.rs  edge_case_tests.rs  helpers.rs  initialization_tests.rs  input_validation_tests.rs  integration.rs  pagination_tests.rs  pause_tests.rs  read_functions_tests.rs  security_tests.rs  signature_verification_tests.rs  stress_tests.rs  versioning_tests.rs
contracts/verified-accounts/tests/unit/: access_control_tests.rs  backend_wallet_tests.rs  composability_tests.rs  helpers.rs  initialization_tests.rs  input_validation_tests.rs  interface_serialization_tests.rs  interface_validation_tests.rs  invariants_tests.rs  pause_tests.rs  proof_validation_tests.rs  read_functions_tests.rs  signature_tests.rs  storage_stability_tests.rs  store_verification_tests.rs  stress_tests.rs
(+73879 files in other folders)
