[package]
name = "governance"
version = "1.0.0"
edition = "2021"
description = "NEAR smart contract for one-person-one-vote governance with verified citizen requirements"
repository = "https://github.com/HackHumanityOrg/alpha-venear-unlock"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "5.19", features = ["legacy"] }
borsh = "1.6"
verified-accounts-interface = { path = "../verified-accounts-interface" }

[dev-dependencies]
near-sdk = { version = "5.19", features = ["legacy", "unit-testing"] }
near-workspaces = "0.21"
near-crypto = "0.34"
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
sha2 = "0.10"
proptest = "1.4"

[lints.clippy]
# Security-focused lints for smart contracts
# These prevent common vulnerabilities and panics that waste gas
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"

# Performance lints (critical for gas optimization)
perf = { level = "warn", priority = -1 }

# Suspicious patterns that may indicate bugs
suspicious = { level = "warn", priority = -1 }

# Allow some noisy pedantic lints
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[profile.release.package."*"]
codegen-units = 1
opt-level = "z"
