[package]
name = "sputnik-bridge"
version = "1.0.0"
edition = "2021"
description = "Bridge contract connecting verified accounts to SputnikDAO"

[features]
default = []
integration-tests = []
testing = []  # Exposes internals for unit tests in tests/ folder

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "5.20", features = ["legacy"] }
borsh = "1.6"

[dev-dependencies]
near-sdk = { version = "5.20", features = ["legacy", "unit-testing"] }
near-workspaces = "0.21"
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
near-crypto = "0.34"
sha2 = "0.10"
borsh = "1.6"
allure-rs = { version = "0.1", features = ["async", "tokio"] }
allure-core = { version = "0.1", features = ["async", "tokio"] }  # Required: macros expand to allure_core:: references
futures = "0.3"  # Required for FutureExt::catch_unwind in async allure tests

[lints.clippy]
# Security-focused lints for smart contracts
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"

# Performance lints
perf = { level = "warn", priority = -1 }

# Suspicious patterns
suspicious = { level = "warn", priority = -1 }

# Allow some noisy pedantic lints
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[profile.release.package."*"]
codegen-units = 1
opt-level = "z"
