[package]
name = "sputnik-dao-interface"
version = "1.0.0"
edition = "2021"
description = "Interface for cross-contract calls to SputnikDAO v2 contract"
license = "MIT"

[dependencies]
near-sdk = { version = "5.20", features = ["legacy"] }

[dev-dependencies]
near-sdk = { version = "5.20", features = ["legacy", "unit-testing"] }
allure-rs = "0.1"
allure-core = "0.1"

[lib]
crate-type = ["rlib"]
