[package]
name = "verification-db"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { version = "5", features = ["legacy"] }
borsh = "1"

[dev-dependencies]
near-sdk = { version = "5", features = ["legacy", "unit-testing"] }

[lints.clippy]
# Security-focused lints for smart contracts
# These prevent common vulnerabilities and panics that waste gas
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"

# Performance lints (critical for gas optimization)
perf = { level = "warn", priority = -1 }

# Suspicious patterns that may indicate bugs
suspicious = { level = "warn", priority = -1 }

# Allow some noisy pedantic lints
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[profile.release.package."*"]
codegen-units = 1
opt-level = "z"
