[package]
name = "verified-accounts-interface"
version = "1.0.0"
edition = "2021"
description = "Interface for cross-contract calls to NEAR verified accounts oracle"
license = "MIT"
repository = "https://github.com/HackHumanityOrg/alpha-venear-unlock"

[dependencies]
near-sdk = { version = "5.18.1", features = ["legacy"] }

[lib]
crate-type = ["rlib"]
