[package]
name = "verified-accounts-interface"
version = "1.0.0"
edition = "2021"
description = "Interface for cross-contract calls to NEAR verified accounts oracle"
license = "MIT"
repository = "https://github.com/HackHumanityOrg/alpha-venear-unlock"

[dependencies]
near-sdk = { version = "5.20", features = ["legacy"] }

[dev-dependencies]
near-sdk = { version = "5.20", features = ["legacy", "unit-testing"] }
allure-rs = "0.1"
allure-core = "0.1"

[lib]
crate-type = ["rlib"]
