[package]
name = "verified-accounts"
version = "1.0.0"
edition = "2021"
description = "NEAR smart contract for storing verified account data with composable interface"
repository = "https://github.com/HackHumanityOrg/alpha-venear-unlock"

[features]
default = []
integration-tests = []
testing = []  # Exposes internals for unit tests in tests/ folder
upgrade-simulation = ["testing"]  # Enables V2 structs for upgrade path testing (contract + record level)

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "5.20", features = ["legacy"] }
borsh = "1.6"

[dev-dependencies]
near-sdk = { version = "5.20", features = ["legacy", "unit-testing"] }
near-workspaces = "0.21"
near-crypto = "0.34"
tokio = { version = "1.48", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }  # For test struct deserialization
rand = "0.9"  # For random nonce generation in tests
anyhow = "1.0"
sha2 = "0.10"
allure-rs = { version = "0.1", features = ["async", "tokio"] }
allure-core = { version = "0.1", features = ["async", "tokio"] }  # Required: macros expand to allure_core:: references
futures = "0.3"  # Required for FutureExt::catch_unwind in async allure tests

[lints.clippy]
# Security-focused lints for smart contracts
# These prevent common vulnerabilities and panics that waste gas
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"

# Performance lints (critical for gas optimization)
perf = { level = "warn", priority = -1 }

# Suspicious patterns that may indicate bugs
suspicious = { level = "warn", priority = -1 }

# Allow some noisy pedantic lints
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[profile.release.package."*"]
codegen-units = 1
opt-level = "z"
