[package]
name = "verified-accounts-v2-fixture"
version = "2.0.0"
edition = "2021"
description = "V2 fixture for upgrade testing - adds nationality_disclosed and upgrade_timestamp"

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.19.0-rust-1.86.0"
image_digest = "sha256:772638e343baeeea24e49062c7d424274f3441452cc06ce97fc4e5695b19fecc"
passed_env = []
container_build_command = [
  "cargo",
  "near",
  "build",
  "non-reproducible-wasm",
  "--locked",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "5.24"
borsh = "1.6"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "deny"
perf = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
